[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Spike.gd" type="Script" id=1]
[ext_resource path="res://Sprites/spike3.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Spike" type="Area2D" index="0" groups=[
"object",
"spike",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Tween" type="Tween" parent="Sprite" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="area_entered" from="." to="." method="_on_Spike_area_entered"]

[connection signal="tween_completed" from="Sprite/Tween" to="." method="_on_Tween_tween_completed"]


